--- a/source/_posts/mysql_150617.md
+++ b/source/_posts/mysql_150617.md
@@ -11,8 +11,5 @@ mysql>show variables like "char%";
 ![](/img/mysql_charset.png)
  2. **PhpMyAdmin**
  Set database,table and column to utf8-general-ci.
- 3.  **Don't need to be anything about php.ini or my.ini.**
+ 3. Set encoding and mbstring.encoding to UTF-8 in php.ini.
 
-
-
-## **input and output**
