--- a/source/_posts/mysql_150617.md
+++ b/source/_posts/mysql_150617.md
@@ -8,7 +8,7 @@ title: Mysql Basic Command
 mysql>show variables like "char%";
 ```
 *Make sure all charset have been set to utf8.*
-![](/img/mysql_charset.png)
+![](/gallery/mysql_charset.png)
  2. **PhpMyAdmin**
  Set database,table and column to utf8-general-ci.
 
