--- a/source/_posts/Tofel_050620.md
+++ b/source/_posts/Tofel_050620.md
@@ -1,4 +1,5 @@
 title: 关于背单词的计划
+categories: Languages
 --------
 
 在跟各种记单词的APP作战了2个月后，用扇贝网的词汇量测试，基本上每次都能过15000的词汇量，然后信心满满的去做阅读理解，结果依然是各种看不懂。事实上早就知道是这个结果，见见凭单词的识记，而不放在阅读中来加深理解是没法真正记住一个单词的。但是之前也试过在阅读中来记单词，后来发现要不就是一句话一半的单词看不懂，一片阅读要花上半个小时。要不就是阅读太容易，根本覆盖不了要掌握的单词面。除此之外，如果是碰到计算机或者数学物理相关的阅读，基本上很容易，毕竟跟自己的兴趣和专业相关，很多相关专业单词也经常接触。如果碰上一片地质学的文章，简直是痛苦，就算是碰上跟电影放映机相关的，也是各种不能理解。
