--- a/source/_posts/mysql_150617.md
+++ b/source/_posts/mysql_150617.md
@@ -1,7 +1,6 @@
-title: Mysql Basic Command
+title: Insert Error And Encoding
+categories: CS
 ---
-
-## **Insert Error And Encoding**
 
  1. **Mysql Command Line**
  ``` bash
